Save Mise en forme intro questionnaire

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -8,21 +8,22 @@
     background-color: transparent;
     /* padding: 10px; */
     margin-bottom: 5vh;
-    border: 2px solid green;
-    padding-bottom: 1vw;
+    /* border: 2px solid green; */
+    /* padding-bottom: 1vw;  */
+    padding-right: 10px;
     display: flex;
     justify-content: space-between;
 }
 
 .bloc-logo-links{
 display: flex;
-border : 2px solid blue;
+/* border : 2px solid blue; */
 align-items: center;
 
 }
 
 .bloc-emojichanger {
-border: 2px solid red;
+/* border: 2px solid red; */
 position: relative;
 }
 
