--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -5,7 +5,7 @@
     margin-top: 1rem;
     padding: 1rem;
     background-color: #2d2e31;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
