--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -1,12 +1,10 @@
 .cards {
     height: 240px;
-    width: 170px;
-    margin: 15px 20px 65px 20px;
+    width: 170px;    
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: white;
-    
+    color: white;    
     border-radius: 10px;
     box-shadow: #FFDC6C 1px 1px 1px 0px, #FFDC6C -1px -1px 1px 0px;
 }
@@ -37,3 +35,6 @@
     text-align: center;
 }
 
+.linkCard {
+    margin: 15px 20px 65px 20px;
+}
