--- a/src/screens/Catalogue.css
+++ b/src/screens/Catalogue.css
@@ -36,7 +36,7 @@
 .movie-grid {
     width: 100%;
     height: 100%;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
     display: flex;
     flex-wrap: wrap; 
     justify-content: center;
@@ -52,6 +52,8 @@
     flex-wrap: wrap; 
     justify-content: center;
     position: fixed;
+    background: rgb(110,139,137);
+    background: linear-gradient(180deg, rgba(110,139,137,1) 7%, rgba(45,46,49,1) 100%);
 }
 
 .footer {
@@ -59,3 +61,44 @@
     margin-top: 1rem;
 }
 
+.pagination{
+    background: linear-gradient(135deg, #2d2e31 0%, #3b3b3b 100%);
+    /* box-shadow: 5px 10px 6px #030303; */
+    opacity: 1;
+    border-radius: 40px;
+    padding : 10px; 
+    display: flex; 
+    justify-content: center;
+    align-items:center;
+    color: white;
+    width: 150px;
+
+}
+
+.paginationContainer {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 100px;
+}
+.page{
+    padding: 15px;  
+    cursor:pointer; 
+}
+
+.current{
+    font-size: 18px; 
+    font-weight: 700;
+    border: 5px solid #FFDC6C; 
+    border-radius: 50%;
+    padding: 12px 15px; 
+}
+
+.chevron{
+    width: 20px; 
+
+}
+
+.chevroninactif{
+    width: 20px; 
+    cursor: not-allowed; 
+}
