--- a/src/components/Emojis.css
+++ b/src/components/Emojis.css
@@ -12,6 +12,10 @@
     
 }
 
+.holderEmojibarre {
+    padding-bottom: 20vh;
+}
+
 .emojibarre {
     display:flex;
     justify-content: space-around;
