--- a/src/screens/Catalogue.css
+++ b/src/screens/Catalogue.css
@@ -36,7 +36,6 @@
 .movie-grid {
     width: 100%;
     height: 100%;
-    padding-bottom: 50px;
     display: flex;
     flex-wrap: wrap; 
     justify-content: center;
@@ -56,11 +55,6 @@
     background: linear-gradient(180deg, rgba(110,139,137,1) 7%, rgba(45,46,49,1) 100%);
 }
 
-.footer {
-    background-color: transparent;
-    margin-top: 1rem;
-}
-
 .pagination{
     background: linear-gradient(135deg, #2d2e31 0%, #3b3b3b 100%);
     /* box-shadow: 5px 10px 6px #030303; */
@@ -78,7 +72,7 @@
 .paginationContainer {
     display: flex;
     justify-content: center;
-    padding-bottom: 100px;
+    /* padding-bottom: 100px; */
 }
 .page{
     padding: 15px;  
@@ -101,4 +95,10 @@
 .chevroninactif{
     width: 20px; 
     cursor: not-allowed; 
+}
+
+.cardContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
