--- a/src/screens/Catalogue.css
+++ b/src/screens/Catalogue.css
@@ -23,10 +23,7 @@
     background-attachment: fixed;
     margin: 0;
     min-height: 100vh;
-    position: relative;
-    /* backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px); */
-
+    position: relative; 
 }
 
 .testFrost {
@@ -101,4 +98,5 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding: 0px 1%;
 }
