créations CardSerie et route modale pour, appel API directement dans CardFilm et CardSerie

--- a/src/components/Quizz.css
+++ b/src/components/Quizz.css
@@ -5,7 +5,7 @@
     align-content: center;
     justify-content: center;
     height: 1;
-   width: 100vw;
+    padding-bottom: 10%;
     }
 
 .title-suiviquestion-container { 
