modif mise en page CSS cardfilm, pagination container + ajout mood coquin/ catalogue

--- a/src/components/Pagination.css
+++ b/src/components/Pagination.css
@@ -15,7 +15,8 @@
 .paginationContainer {
     display: flex;
     justify-content: center;
-    padding-bottom: 100px;
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
 .page{
     padding: 15px;  
