save avant recup fichier dev

--- a/src/components/Quizz.css
+++ b/src/components/Quizz.css
@@ -1,5 +1,16 @@
 
-  
+  .PageQuizz {
+    display : flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background: linear-gradient(180deg, rgba(110,139,137,1) 7%, rgba(45,46,49,1) 100%);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 100vh;
+}
+
+
   .quizz-container {
     display: flex;
     align-content: center;
