--- a/src/components/TableauScore.css
+++ b/src/components/TableauScore.css
@@ -1,11 +1,22 @@
-
+.tableau-score {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background: linear-gradient(
+180deg
+, rgba(110,139,137,1) 7%, rgba(45,46,49,1) 100%);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 100%;
+    width: 100vw;
+}
 
 .extraitImportant {
     font-weight: bold;
 }
 
 .tableau-score{
-    /* background: black; */
     width: 100vw;
 }
 
