--- a/src/components/EmojiChanger.css
+++ b/src/components/EmojiChanger.css
@@ -1,11 +1,9 @@
-   
     .search-box {
         /* position: absolute; */
         top: 2%;
         right: 2%;
         /* background-color: #565658; */
-        background-image: linear-gradient(
-    135deg, #2d2e31 0%, #3b3b3b 100%);
+        background-image: linear-gradient(135deg, #2d2e31 0%, #3b3b3b 100%);
         height: 40px;
         border-radius: 70px;
         padding-right: 0;
@@ -13,7 +11,6 @@
         justify-content: center;
         align-items: start;
         flex-direction: row;
-
     }
     
     .search-box:hover > .search-txt {
@@ -73,12 +70,14 @@
         background-color: #2d2e31;
     }
 
+
 @media screen and (min-width: 750px){
 .search-box:hover > .search-txt {
     flex-direction: row; /*Change l'orientation de la barre*/
     background-color: #2d2e31;
     border-radius: 50px;
 }
+
 /*POINT ZERO  19/01 08h30 : changement ,  REVENIR EN ARRIERE JUSQU ICI au besoin*/
 .lienSelection {
     width: 50px;
