--- a/src/components/Pagination.css
+++ b/src/components/Pagination.css
@@ -1,7 +1,8 @@
 .pagination{
     background: linear-gradient(135deg, #2d2e31 0%, #3b3b3b 100%);
-    /* box-shadow: 5px 10px 6px #030303; */
+    box-shadow: 0px 0px 8px  #ffdd6c4d; /*C est ici qu'on change le contour*/
     opacity: 1;
+    border: 2px solid #ffffff57;
     border-radius: 40px;
     padding : 10px; 
     display: flex; 
@@ -39,4 +40,40 @@
 .chevroninactif{
     width: 20px; 
     cursor: not-allowed; 
+}
+
+@media screen and (max-width: 750px){
+    .pagination {
+        background: linear-gradient(135deg
+    , #2d2e31 0%, #3b3b3b 100%);
+        box-shadow: 0px 3px 10px 1px #030303;
+        opacity: 1;
+        border-radius: 25px;
+        padding: 1%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        width: auto;
+        margin: 0;
+    }
+
+    .current {
+        /* font-size: 18px; */
+        font-weight: 700;
+        /* border: 5px solid #FFDC6C; */
+        border-radius: 50%;
+        padding: 4px 10px;
+        vertical-align: center;
+    }
+
+    .page {
+        padding: 0 10px;
+        cursor: pointer;
+    }
+
+
+
+
+
 }
