--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -50,4 +50,9 @@
         margin-top: 1vw;
         font-size: 4vw;
     }
+
+    .cards:hover {
+        transform:none;
+        transition:none;
+    }
 }
