--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -15,16 +15,16 @@
 
 .link{
     margin-left: 15px;
-    color: #fff;
-    
+    color: rgba(255, 255, 255, 0.5);  
 }
+
+
 a {
     color: rgba(255, 255, 255, 0.5);  
 }
-a:hover{
+a:hover, .link:hover{
     color: #FFDC6C;
     transition: 200ms ease-in;
-    
 }
 
 .media:hover{
@@ -38,6 +38,12 @@ a:hover{
     width: 20%;
     font-size: 2em;
     text-decoration: none;
+}
+
+.cgu {
+    display: flex;
+    align-items: center;
+    padding-left: 1vw;
 }
 
 @media screen and (max-width : 650px){
