--- a/src/screens/Catalogue.css
+++ b/src/screens/Catalogue.css
@@ -7,7 +7,6 @@
 }
 
 .catalogPage {
-    /* USE background-image: url(../assets/exemple.jpg); to Apply an image as a background */
     background-color: rgb(45, 46, 49);
     background: rgb(110,139,137);
     background: linear-gradient(180deg, rgba(110,139,137,1) 7%, rgba(45,46,49,1) 100%);
@@ -39,10 +38,8 @@
     display: flex;
     flex-wrap: wrap; 
     justify-content: center;
-    /* position: fixed; */
 }
 
-/* TEST */
 .none {
     width: 100%;
     height: 100%;
@@ -57,7 +54,6 @@
 
 .pagination{
     background: linear-gradient(135deg, #2d2e31 0%, #3b3b3b 100%);
-    /* box-shadow: 5px 10px 6px #030303; */
     opacity: 1;
     border-radius: 40px;
     padding : 10px; 
@@ -72,7 +68,6 @@
 .paginationContainer {
     display: flex;
     justify-content: center;
-    /* padding-bottom: 100px; */
 }
 .page{
     padding: 15px;  
@@ -102,4 +97,12 @@
     flex-wrap: wrap;
     justify-content: center;
     padding: 0px 1%;
+}
+
+@media screen and (max-width: 750px){
+
+    .cardContainer {
+        padding-top: 10vh;
+    }
+
 }
