--- a/src/components/NavbarMobile.css
+++ b/src/components/NavbarMobile.css
@@ -1,47 +1,73 @@
-.navbarmobile {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-    position: fixed;
-    bottom: 0px;
-    height: 60px;
-    width: 100%;
-    background: rgb(230, 229, 229);
-    border-radius:10px 10px 0 0;
-    
-    
-}
-.circle-btn{
-    position: relative ;
-    bottom: 20px;
-    /* bottom: 10px; */
-    /* au click , il change de format */
+@media screen and (max-width: 550px){
+    .navbarmobile {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+        position: fixed;
+        bottom: 0px;
+        height: 60px;
+        width: 100%;
+        background: rgb(230, 229, 229);
+        border-radius:10px 10px 0 0;
+    }
+            
 
-    height:60px;
-    width:60px;
-    background-color: rgb(231, 189, 52);
-    border-radius: 50%;
-    border : 4px solid rgb(230, 229, 229);
+
+    .navbarmobile-secret {
+        display: none;
+        flex-direction: row;
+        justify-content: center;
+        position: fixed;
+        bottom: 50px;
+        height: 70px;
+        width: 100%;
+        background: rgb(197, 197, 197);
+        border-radius:10px 10px 0 0;
+        border : 4px solid rgb(230, 229, 229)
+    }
+    .icon{
+        height:35px;
+        width: 35px;
+    }
+
+    .navbar-container { /*Marge basse avec Margin*/
+        margin-top: 10%;
+    }
+
+
+    .circle-btn{
+        position: relative ;
+        bottom: 20px;
+        /* bottom: 10px; */
+        /* au click , il change de format */
+        height:60px;
+        width:60px;
+        background-color: rgba(197, 197, 197);
+        border-radius: 50%;
+        border : 4px solid rgb(230, 229, 229);
+
+
+    }
+    .circle-btn:active{
+        background-color: rgba(197, 197, 197);
+    }
+
+    .EmojiSelected-NavBar{
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height:40px;
+    width: 40px;
+    border-radius: 10px;
+
+    /* filter: brightness(10*/
 }
-.circle-btn:active{
-    background-color: rgb(197, 173, 92);
 }
 
-.navbarmobile-secret {
-    display: none;
-    flex-direction: row;
-    justify-content: center;
-    position: fixed;
-    bottom: 50px;
-    height: 70px;
-    width: 100%;
-    background: rgb(197, 197, 197);
-    border-radius:10px 10px 0 0;
-    border : 4px solid rgb(230, 229, 229)
-}
-.icon{
-    height:35px;
-    width: 35px;
+@media screen and (min-width: 551px){
 
-}
+.navbar-container { 
+    display:none;
+}}
