--- a/src/components/CardFilm.css
+++ b/src/components/CardFilm.css
@@ -121,7 +121,7 @@
     height: 295px;
 }
 
-.fakeTrailer {
+.noTrailer {
     border-radius: 10px 10px 10px 10px / 10px 10px 10px 10px;
     width: 400px;
     height: 295px;
